--- a/frontend/src/app/globals.css
+++ b/frontend/src/app/globals.css
@@ -7,4 +7,21 @@ body {
   'Roboto Mono', 'Oxygen Mono', 'Ubuntu Monospace', 'Source Code Pro',
   'Fira Mono', 'Droid Sans Mono', 'Courier New', monospace;
   overflow-x: hidden;
+  caret-color: transparent;
+  display: flex;
+  flex-direction: column;
+  justify-content: middle;
 }
+
+form:focus {
+  caret-color: auto;
+}
+
+input:focus {
+  caret-color: auto;
+}
+
+a, a:hover, a:visited, a:active {
+  color: inherit;
+  text-decoration: none;
+ }
