--- a/frontend/src/app/globals.css
+++ b/frontend/src/app/globals.css
@@ -13,6 +13,13 @@ body {
   justify-content: middle;
 }
 
+main {
+  display: flex;
+  flex-direction: column;
+  flex: 1;
+  padding: 2rem;
+}
+
 form:focus {
   caret-color: auto;
 }
