--- a/frontend/src/components/header.module.css
+++ b/frontend/src/components/header.module.css
@@ -13,8 +13,9 @@
 .h1 {
     flex: 1;
     text-align: center;
-    font-size: 2rem;
+    font-size: 3rem;
     font-weight: 700;
+    line-height: 0.1rem;
     padding-bottom: 3rem;
     color: #14222b;
 }
@@ -22,20 +23,30 @@
 .nav {
     align-self: end;
     justify-self: left;
-    padding-bottom: 2px;
-    width: 30vw;
-    font-size: 1.3rem;
+    margin-bottom: 0.3rem;
+    width: 40vw;
+    font-size: 1rem;
     font-weight: 600;
-    color: #14222b;
+    color: white;
+}
+
+.counterBalanceNav {
+    width: 40vw;
 }
 
 .ul {
     display: flex;
     flex-direction: row;
+    flex-wrap: wrap;
     gap: 1rem;
     padding-left: 2rem;
+    line-height: 1.5rem;
 }
 
-.counterBalanceNav {
-    width: 30vw;
+.li {
+    background-color: #4a6f86;
+    border-radius: 0.4rem;
+    padding-left: 0.2rem;
+    padding-right: 0.2rem;
+    border: solid 0.1rem black;
 }
