--- a/frontend/src/components/articleForm.module.css
+++ b/frontend/src/components/articleForm.module.css
@@ -3,7 +3,7 @@
     justify-content: center;
 }
 
-.searchContainer {
+.articleFormContainer {
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -15,25 +15,38 @@
     box-sizing: border-box;
 }
 
-.h2 {
+.articleFormContainer h2 {
+    align-self: flex-start;
     font-size: 2rem;
     font-weight: 600;
 }
 
-.searchBar {
-    margin-top: 1rem;
-    padding: 0.5rem;
-    border-radius: 0.5rem;
-    border: 1px solid #4d819f;
-    width: 40vw;
-    font-size: 1rem;
-    box-sizing: border-box;
+.articleFormContainer form {
+    display: flex;
+    flex-direction: column;
+    align-items: left;
+    width: 80%;
 }
 
-.searchButton {
+.articleFormContainer label {
+    font-weight: 600;
+}
+
+.articleFormContainer input {
+    align-items: left;
+    margin-top: 1rem;
+    width: stretch;
+    margin-bottom: 1rem;
+    padding: 0.3rem;
+}
+
+
+.articleFormContainer button {
     margin-top: 1rem;
     padding: 0.5rem;
     border-radius: 0.5rem;
+    align-self:flex-end;
+    width:fit-content;
     background-color: #5d9dc4;
     color: white;
     font-weight: bold;
@@ -43,6 +56,7 @@
     box-sizing: border-box;
 }
 
-.searchButton:hover {
+.articleFormContainer button:hover {
     background-color: #274252;
 }
+
