--- a/frontend/src/components/search.module.css
+++ b/frontend/src/components/search.module.css
@@ -5,7 +5,7 @@
     flex-direction: column;
 }
 
-.searchContainer {
+.contentContainer {
     display: flex;
     flex-direction: column;
     align-items: center;
