--- a/frontend/src/components/header.module.css
+++ b/frontend/src/components/header.module.css
@@ -30,6 +30,7 @@
     font-weight: 600;
     color: white;
     list-style: none;
+    list-style-type: none;
 }
 
 .counterBalanceNav {
@@ -44,6 +45,7 @@
     padding-left: 2rem;
     line-height: 1.5rem;
     list-style: none;
+    list-style-type: none;
 }
 
 .li {
@@ -53,4 +55,5 @@
     padding-right: 0.2rem;
     border: solid 0.1rem black;
     list-style: none;
+    list-style-type: none;
 }
